@@ -1,6 +1,7 @@
 Current Version: @VERSION@
 
 ctags-@VERSION@ (@DATE@)
+* Fixed detection of triple strings inside other strings [Python, But #1988130].
 * Fixed an endless loop with comments in triple strings [Python, Bug #1988027].
 * Fixed bug where functions were sometimes seen as methods [Python, Bug #1988026].
 * Added support for VHDL [VHDL, Bug #1943306].
